--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@electron-delta/updater",
-  "version": "0.1.17",
+  "name": "@electron-delta-update/updater",
+  "version": "0.1.0",
   "description": "True delta updater for windows",
   "main": "src/index.js",
   "scripts": {
