--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   },
   "homepage": "https://github.com/electron-delta/electron-delta-updater#readme",
   "dependencies": {
-    "cross-fetch": "^3.1.5",
-    "electron-updater": "^5.0.1",
-    "fs-extra": "^10.0.1",
-    "semver": "^7.3.7",
-    "yaml": "^2.0.1"
+    "cross-fetch": "^4.0.0",
+    "electron-updater": "^6.2.1",
+    "fs-extra": "^11.2.0",
+    "semver": "^7.6.3",
+    "yaml": "^2.5.0"
   },
   "devDependencies": {
-    "electron": "*",
-    "eslint": "^8.13.0",
+    "electron": "^32.0.1",
+    "eslint": "^9.9.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.29.1"
   }
 }
