--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@electron-delta-update/updater",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "True delta updater for windows",
   "main": "src/index.js",
   "scripts": {
     "test": "electron splash-test/main.js",
-    "cargo": "cd src/mac-updater && cargo build"
+    "cargo": "cd src/mac-updater && cargo build",
+    "publish": "npm publish --access=public"
   },
   "keywords": [
     "electron-delta-updater",
