--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "True delta updater for windows",
   "main": "src/index.js",
   "scripts": {
-    "test": "electron splash-test/main.js",
+    "test": "tsc splash-test/main.ts",
     "cargo": "cd src/mac-updater && cargo build",
     "publish": "npm publish --access=public"
   },
@@ -31,6 +31,7 @@
     "electron": "^32.0.1",
     "eslint": "^9.9.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "typescript": "^5.5.4"
   }
 }
